Summary: Adding minor naming conversion improvements.